# rotate

./: .gitignore  README.md  index.html  package-lock.json  package.json
scripts/: run-desktop-build.mjs  run-desktop.mjs
src/: App.tsx  clipboardSecure.ts  index.css  secretDestinations.ts  types.ts  vaultConstants.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: cf_api.rs  custom_secret_commands.rs  db.rs  github_api.rs  lib.rs  local_env.rs  main.rs  resend_api.rs  secrets.rs  security.rs  simple_provider_commands.rs  supabase_api.rs  vercel_api.rs
src/components/: CloudflareDetail.tsx  CustomSecretDetail.tsx  ExploreView.tsx  GitHubDetail.tsx  HomeView.tsx  LanguageSwitcher.tsx  ManualSecretProviderDetail.tsx  OauthGoogleDetail.tsx  ResendDetail.tsx  ServicePlaceholderDetail.tsx  ServicesView.tsx  SettingsView.tsx  Sidebar.tsx  SupabaseDetail.tsx  VercelDetail.tsx
src/components/cloudflare/: AccessServiceTokensSection.tsx  AccountTokensSection.tsx  CloudflareAccountModals.tsx  CloudflareConnectForm.tsx  PagesSecretsSection.tsx  SecretsStoreSection.tsx  StorageDiagnosticsPanel.tsx  TurnstileRotateResultModal.tsx  TurnstileSection.tsx  WorkersSecretsSection.tsx  useTurnstileDestinations.ts
src/components/provider/: AlertMessage.tsx  CredentialGuide.tsx  DeployTargetsPicker.tsx  DestructiveToggle.tsx  LinkedAccountBar.tsx  ProviderHeader.tsx  ProviderLoadingPanel.tsx  SecretPropagationModal.tsx  VercelEnvWriter.tsx  errors.ts  (+2 more)
src/i18n/: index.ts
src/locales/: en.json  it.json
(+3 files in other folders)
