[package]
name = "rotate"
version = "0.1.0"
description = "Rotate - gestione centralizzata delle chiavi API"
authors = ["you"]
edition = "2021"

[lib]
# Suffisso `_lib` necessario su Windows per non far coincidere nome bin e lib (cargo#8519).
name = "rotate_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
keyring = "3"
argon2 = "0.5"
password-hash = "0.5"
rand_core = { version = "0.6", features = ["getrandom"] }
tauri-plugin-clipboard-manager = "2"
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security_Cryptography"] }
